# beats

./: .gitignore  roadmap.md  sadbox.code-workspace
android/app/src/main/java/com/filesync/app/: MainActivity.kt
android/app/src/main/java/com/filesync/app/hooks/: APManager.java
android/app/src/main/java/com/filesync/app/screens/: MainScreen.kt
beats/: package-lock.json  package.json  tsconfig.json  vite.config.ts
beats/src/: App.vue  main.ts
beats/src-tauri/: Cargo.toml  tauri.conf.json
beats/src-tauri/icons/: icon.icns
beats/src-tauri/server/: Cargo.toml
beats/src-tauri/server/src/: lib.rs
beats/src-tauri/src/: lib.rs  main.rs
beats/src/assets/: main.css
beats/src/router/: index.ts
beats/src/views/: defaultScreen.vue  uploadScreen.vue  waitingForConnection.vue
