[package]
name = "beats"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[workspace]
members = ["server"]

[workspace.dependencies]
embedded_server = { path = "server" }
thiserror = "2.0.12"
serde = { version = "1" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beats_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
embedded_server = { workspace = true, features = ["config", "server"] }
local-ip-address = "0.6.4"
rand = { version = "0.9.0", features = ["small_rng"] }
random_str = "0.1.2"
thiserror = "2.0.12"
tokio = "1.43.0"
uuid = { version = "1.15.1", features = ["v4"] }
